--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Assessment</title>
+    <meta
+      name="description"
+      content="User can view, create, delete and update posts"
+    />
   </head>
   <body>
     <div id="root"></div>
